--- a/env.yml
+++ b/env.yml
@@ -6,6 +6,9 @@ dependencies:
   - numpy
   - sphinx
   - pytest
+  - netcdf4
+  - xarray
+  - sasktran2
   - pip:
     - sphinx_book_theme
     - myst-nb
