--- a/env.yml
+++ b/env.yml
@@ -6,7 +6,13 @@ dependencies:
   - numpy
   - sphinx
   - pytest
+  - netcdf4
+  - xarray
+  - pandas
+  - sasktran2
+  - usask-arg-nightly::skretrieval
   - pip:
     - sphinx_book_theme
     - myst-nb
     - sphinx_design
+    - sasktran
