--- a/env.yml
+++ b/env.yml
@@ -8,8 +8,11 @@ dependencies:
   - pytest
   - netcdf4
   - xarray
+  - pandas
   - sasktran2
+  - usask-arg-nightly::skretrieval
   - pip:
     - sphinx_book_theme
     - myst-nb
     - sphinx_design
+    - sasktran
