Flight updates, add snakemake processing chain

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,3 +78,4 @@ isort.required-imports = ["from __future__ import annotations"]
 "tests/**" = ["T20", "PT009"]
 "docs/source/conf.py" = ["E402"]
 "**__init__.py" = ["F401"]
+"workflows/*" = ["F821"]
