--- a/src/showlib/flights/er2_2023/Specifications/er2_2023.yaml
+++ b/src/showlib/flights/er2_2023/Specifications/er2_2023.yaml
@@ -11,7 +11,7 @@ level0:
 
 cdb:
     nominal_littrow_wavelen_nm: 1363.362028393819                  # Nominal Littrow wavelength in air at 23C
-    optics_magnification: 0.219                                   # back end optics magnification determined in the lab
+    optics_magnification: 0.2196762889195097                                   # back end optics magnification determined in the lab
     electrons_per_DN: 39.6                                         # Nominal electrons per DN on the detector (based upon full well = 650000 equivalent to 16384 DN
     detector_readout_noise: 150.0                                  # Readout noise in electrons.
     dn_saturated_value: 16383                                      # Any raw Level 0 pixel greater than or equal to this value is considered saturated and will be set to NaN
@@ -63,3 +63,6 @@ badpixels:                                                        # Bad pixels.
 
    big:                                                        # Large, multi-point hot spots [ix0,ix1,iy0,iy1] define a fully inclusive 1 based indexing rectangle . Hots spots occur from ix0 to ix1 inclusive and from iy0 to iy1 inclusive
       - [263, 266, 384, 388]
+
+   Calibration:
+     cal_file:
