--- a/env.yml
+++ b/env.yml
@@ -10,7 +10,7 @@ dependencies:
   - xarray
   - pandas
   - sasktran2
-  - usask-arg-nightly::skretrieval
+  - usask-arg::skretrieval
   - pip:
     - sphinx_book_theme
     - myst-nb
