Update to use new skretrieval (#9)

--- a/env.yml
+++ b/env.yml
@@ -10,9 +10,8 @@ dependencies:
   - xarray
   - pandas
   - sasktran2
-  - usask-arg-nightly::skretrieval
+  - usask-arg::skretrieval
   - pip:
     - sphinx_book_theme
     - myst-nb
     - sphinx_design
-    - sasktran
