--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,8 @@ on:
       - main
   pull_request:
     types: [ opened, reopened, synchronize, labeled ]
+  schedule:
+    - cron: '0 0 * * *'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -21,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        python-version: ["3.10", "3.11", "3.12"]
+        environment: [py311, py312]
 
     steps:
       - name: Checkout repository
@@ -31,45 +33,18 @@ jobs:
           submodules: true
 
       - name: Setup environment
-        uses: mamba-org/setup-micromamba@v1
+        uses: prefix-dev/setup-pixi@v0.8.1
         with:
-          environment-file: env.yml
-          environment-name: test-env
-          create-args: >-
-            python=${{matrix.python-version}}
-
-      - name: Install package
-        shell: bash -el {0}
-        run: |
-          python -m pip install -e .
+          environments: ${{ matrix.environment }}
 
       - name: run pytests
         shell: bash -el {0}
         run: |
-          python -m pytest -v tests/
+          pixi r test
 
-  test-conda-build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          submodules: true
-
-      - name: Setup Conda build environment
-        uses: mamba-org/setup-micromamba@v1
-        with:
-          environment-file: ci/conda-envs/mamba-build.yml
-
-      - name: Build Conda package
-        shell: bash -el {0}
-        run: |
-          conda mambabuild conda.recipe --output-folder pkgs/ -c usask-arg-nightly
 
   build-docker:
-    name: Build and push Docker image
+    name: Build Docker image
     env:
       REGISTRY: ghcr.io
       IMAGE_NAME: ${{ github.repository }}
