--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,31 @@ jobs:
           name: releases
           path: dist
 
+  upload_wheels:
+    runs-on: ubuntu-latest
+    needs: build_wheel
+    environment:
+      name: pypi
+      url: https://pypi.org/p/showlib
+    permissions:
+      id-token: write
+    if: (github.event_name == 'release')
+    steps:
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: releases
+          path: dist
+
+      - name: Publish package to PyPI
+        uses: pypa/gh-action-pypi-publish@v1.8.7
+        with:
+          verbose: true
+
+
   build-and-push-image:
     name: Build and push Docker image
     env:
